objects/UEStoreUSLPlan__mdt.object
<CustomObject>
    <fields>
        <fullName>Best_Plan__c</fullName>
        <label>Best Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Better_Plan__c</fullName>
        <label>Better Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Plan__c</fullName>
        <label>Good Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Best_Plan__c</fullName>
        <label>Other Best Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Better_Plan__c</fullName>
        <label>Other Better Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Module__c</fullName>
        <label>Service Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPP</fullName>
                    <default>true</default>
                    <label>PPP</label>
                </value>
                <value>
                    <fullName>PDP</fullName>
                </value>
                <value>
                    <fullName>ADDON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>Sub Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UEStoreUSLPlan</label>
    <pluralLabel>UEStoreUSLPlans</pluralLabel>
</CustomObject>